# Multi-Modal-Local-RAG

./: .env  .gitignore  README.md  prompts.py  pyproject.toml  streamlit_app.py
backend/: app.py
backend/api/: chat.py  health.py
backend/core/: config.py  dependency.py
backend/models/: schemas.py
backend/servies/: chat_service.py  file_service.py  model_service.py  types.py
backend/servies/interface/: chat_interface.py  file_interface.py  model_interface.py
backend/system_prompts/: notebook_prompts.py  prompt_v1.py
backend/utils/: json_docstore.py  logging.py  parent_store.py  process_pdf.py
